Fix button height when the icon is wrapped

--- a/client/src/sass/include/_mixins.scss
+++ b/client/src/sass/include/_mixins.scss
@@ -254,7 +254,7 @@
 
   border: 0;
   font-weight: $font-semibold;
-  height: $button-height;
+  min-height: $button-height;
   line-height: $button-height;
 
   // Because of primeng that redefines border-radius of all input[type="..."]
